# modbus_simulator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
config_samples/: modbus_client_log.yaml  modbus_server_log.yaml
docs/: .rustc_info.json  .rustdoc_fingerprint.json  crates.js  index.html  index.md  search-index.js  settings.html  source-files.js
docs/modbus_client/: all.html  fn.handle_error.html  fn.handle_request.html  fn.main.html  index.html  sidebar-items.js
docs/modbus_client/tcp/: constant.MODBUS_HEADER_SIZE.html  constant.MODBUS_MAX_PACKET_SIZE.html  constant.MODBUS_PROTOCOL_TCP.html  constant.MODBUS_TCP_DEFAULT_PORT.html  enum.Function.html  index.html  sidebar-items.js  struct.Header.html  struct.ModbusConfig.html  struct.Transport.html
docs/modbus_protocol/: all.html  index.html  sidebar-items.js
docs/modbus_protocol/coils/: enum.Coil.html  index.html  sidebar-items.js
docs/modbus_protocol/exception_code/: enum.Error.html  enum.ExceptionCode.html  enum.Reason.html  index.html  sidebar-items.js  type.Result.html
docs/modbus_protocol/function_code/: enum.FunctionCode.html  enum.ModbusFunction.html  (+7 more)
docs/modbus_server/: all.html  constant.MODBUS_TCP_DEFAULT_PORT.html  fn.main.html  index.html  sidebar-items.js  struct.ModbusConfig.html
modbus_client/: Cargo.toml
modbus_client/src/: main.rs  tcp.rs
modbus_protocol/: Cargo.toml
modbus_protocol/src/: coils.rs  exception_code.rs  function_code.rs  lib.rs  requests.rs  utils.rs
modbus_server/: Cargo.toml
modbus_server/src/: main.rs  mbap.rs  server_status.rs  tcp.rs
(+56 files in other folders)
