[package]
name = "modbus_client"
version = "0.1.0"
authors = ["guozhaohui"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modbus_protocol = { path = "../modbus_protocol" }
byteorder = "1"
num-derive = "^0.2"
num-traits = "^0.2"
clap = "2"
log = "^0.4"
log4rs = "^1.0"
